samples/_failures_safe/1761293282_83c7ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2771b984.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_2771b984.c:146:5: error: ‘uint32’ undeclared (first use in this function); did you mean ‘uint32_t’?
  146 |     uint32
      |     ^~~~~~
      |     uint32_t
./samples/SAFE/__tmp_2771b984.c:146:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2771b984.c:146:11: error: expected ‘;’ at end of input
  146 |     uint32
      |           ^
      |           ;
./samples/SAFE/__tmp_2771b984.c:146:5: error: expected declaration or statement at end of input
  146 |     uint32
      |     ^~~~~~
